--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -7,8 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "react": "16.5.0",
-    "react-native": "0.57.1"
+    "react-native": "0.57.1",
+    "react-native-elements": "0.18.5",
+    "react-native-image-picker": "^0.27.1",
+    "react-navigation": "1.4.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
